syntax = "proto3";

import "com/sunya/electionguard/proto/common.proto";

option java_package = "com.sunya.electionguard.proto";
option java_outer_classname = "RemoteKeyCeremonyProto";

service RemoteKeyCeremonyService {
  rpc registerTrustee (RegisterTrusteeRequest) returns (RegisterTrusteeResponse) {}
}

message RegisterTrusteeRequest {
  string guardian_id = 1;
  string remote_url = 2;
}

message RegisterTrusteeResponse {
  string guardian_id = 2;
  uint32 guardian_x_coordinate = 3;
  uint32 quorum = 4;
  string error = 5; // error if not empty
}
